# forester

./: .build.yaml  .dockerignore  .forester-formatter.json  .gitignore  .gitmodules  BUILDING.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Justfile  NOTES.md  README.md  README.nix.md  REUSE.toml  THIRD_PARTY_NOTICES.md  build-static-linux.sh  deny.toml  dune  dune-project  flake.nix  forester.code-snippets  forester.code-snippets.license  forester.opam  forester_language_spec.license  forester_language_spec.md  format.sh  index.mld  install.sh  lefthook.yml  result  static.patch
lib/compiler/: Action.ml  Asset_content_addresser.ml  Asset_router.ml  Build_latex.ml  Build_latex.mli  Cache.ml  Code.ml  Code.mli  Config.ml  Config.mli  Diagnostic_store.ml  Dir_scanner.ml  Dir_scanner.mli  Driver.ml  Eio_util.ml  Eio_util.mli  Eval.ml  Eval.mli  Eval_args.ml  Eval_datalog.ml  Eval_object.ml  Eval_transclusion.ml  Expand.ml  Expand.mli  Export_for_test.ml  Forest.ml  Forest.mli  Forest_graph.mli  Forest_graphs.ml  Forest_graphs.mli  Forest_scanner.ml  Forest_scanner.mli  Forester_compiler.ml  Forester_forest.ml  Grammar.messages  Grammar.mly  Imports.ml  Imports.mli  Iri_resolver.ml  Iri_util.ml  (+25 more)
lib/compiler/test/: Test_LaTeX_pipeline.ml  Test_compiler.ml  Test_dir_scanner.ml  Test_driver.ml  Test_errors.ml  Test_eval.ml  Test_expansion.ml  Test_import_graph.ml  Test_incremental_compilation.ml  Test_iri_util.ml  Test_uri_util.ml  dune  (+4 more)
lib/core/: Addr.ml  Addr.mli  Base.ml  Base.mli  Builtin_queries.ml  Builtin_relation.ml  Code.ml  Code.mli  Config.ml  Config.mli  Datalog_engine.ml  Datalog_engine.mli  Datalog_engine_intf.ml  Datalog_eval.ml  Datalog_eval.mli  Datalog_expr.ml  Eval.ml  Eval.mli  Expand.ml  Forest_graph.ml  Forest_graph.mli  Forest_graphs.ml  Forest_graphs.mli  Forester_core.ml  Forester_graphs.ml  Iri_scheme.ml  Iri_scheme.mli  Iri_tbl.ml  Iri_tbl.mli  Prim.ml  Query.ml  Query.mli  Range.ml  Reporter.ml  Reporter.mli  Reporter_message.ml  Reps.ml  Resolver.ml  Symbol.ml  Symbol.mli  (+22 more)
lib/forest/: Addr_graph.ml  Addr_graph.mli  Config.ml  Config.mli  Diagnostics.ml  Forest.ml  Forest.mli  Forest_graph.ml  Forest_graph.mli  Forest_graphs.ml  Forest_graphs.mli  Forest_util.ml  Forester_forest.ml  Html_client.ml  Html_client.mli  Imports.ml  Imports.mli  Iri_resolver.ml  Iri_util.ml  Json_client.ml  Json_client.mli  Json_manifest_client.ml  Json_manifest_client.mli  Legacy_query_engine.ml  Legacy_query_engine.mli  Legacy_xml_client.ml  Legacy_xml_client.mli  Plain_text_client.ml  Plain_text_client.mli  Query_engine.ml  Query_engine.mli  Render_json.ml  Render_json.mli  State.ml  State.mli  Xml_forester.ml  Xml_forester.mli  Xmlns_effect.ml  Xmlns_effect.mli  dune
lib/frontend/: .Diagnostics.ml  Atom_client.ml  Build_latex.ml  Build_latex.mli  Compiler.ml  Compiler.mli  Config.ml  Config.mli  Config_parser.ml  Config_parser.mli  Css.ml  DSL.ml  Dir_scanner.ml  Dir_scanner.mli  Eio_util.ml  Export_for_test.ml  Forest_reader.ml  Forest_scanner.ml  Forest_util.ml  Forester.ml  Forester.mli  Forester_frontend.ml  Grammar.mly  Html_client.ml  Htmx_client.ml  Htmx_client.mli  Htmx_content.ml  Htmx_frontmatter.ml  Htmx_query.ml  Htmx_toc.ml  Http_server.ml  Import_graph.ml  Import_graph.mli  Json_manifest_client.ml  Json_manifest_client.mli  LaTeX_pipeline.ml  LaTeX_pipeline.mli  Legacy_import_graph.ml  Legacy_import_graph.mli  Legacy_xml_client.ml  (+11 more)
lib/human_datetime/: Conversion.ml  Conversion.mli  Forester_human_datetime.ml  Grammar.mly  Human_datetime.ml  Human_datetime.mli  Lexer.mll  Types.ml  dune
lib/language_server/: Analysis.ml  Analysis.mli  Base.ml  Call_hierarchy.ml  Change_configuration.ml  Code_action.ml  Code_lens.ml  Completion.ml  Completion_kind.ml  Completion_sources.ml  Definitions.ml  Diagnostics.ml  Did_change.ml  Did_create_files.ml  Did_open.ml  Document_format.ml  Document_format_render.ml  Document_link.ml  Document_symbols.ml  Forester_lsp.ml  Forester_lsp.mli  Highlight.ml  Hover.ml  Index.ml  Inlay_hint.ml  LspEio.ml  LspServer.ml  Lsp_error.ml  Lsp_server.ml  Lsp_server.mli  Lsp_shims.ml  Lsp_state.ml  Publish.ml  Semantic_tokens.ml  State.ml  Util.ml  Workspace_symbols.ml  dune
lib/parser/: Code.ml  Code.mli  Grammar.mly  Lexer.mll  Parse.ml  Parse.mli  Rust_parser.ml  Rust_parser_json.ml  Rust_parser_process.ml  Rust_parser_types.ml  Syntax_error.ml  dune
lib/prelude/: BaseN.ml  BaseN.mli  Compare.ml  Date.ml  Date.mli  Eio_util.ml  Eio_util.mli  Forester_prelude.ml  Fun_util.ml  List_util.ml  Option_util.ml  String_util.ml  String_util.mli  dune
lib/search/: Context.ml  Forester_search.ml  Index.ml  Search_engine.ml  Stemming.ml  Test_forester_search.ml  Tokenizer.ml  dune  search.t
lib/server/: Headers.ml  Index.ml  README.md  Router.ml  Search_menu.ml  Server.ml  dune
rust_parser/: .forester-formatter.json  Cargo.toml
rust_parser/src/: ast.rs  error.rs  ffi.rs  lexer.rs  lib.rs  main.rs  parser.rs
test/: Build.t  Compiler.ml  Cram.t  DSL.ml  E2e.ml  Errors.t  Expansion.ml  Export.t  Forester_test.ml  Import_graph.ml  Init.t  New.t  Output.ml  Prelude.ml  Render.t  Test_DSL.ml  Test_LaTeX_pipeline.ml  Test_compiler.ml  Test_config.ml  Test_e2e.ml  Test_errors.ml  Test_eval.ml  Test_expansion.ml  Test_http_server.ml  Test_implanting.ml  Test_import_graph.ml  Test_iri_resolver.ml  Test_iri_util.ml  Test_machine.ml  Test_output.ml  Test_parser.ml  Test_support.ml  Test_transclusion.ml  Testables.ml  Transclude.t  Transclusion.ml  dsl.ml  dune  parse.expected  parse.ml
test/cram-forest/: forest.toml
test/errors/: expansion_error.tree  parse_error.tree
test/forest/: error-no-assets.toml  error-no-theme.toml  error-no-trees.toml  export.toml  forest.toml  no-export.toml
test/imports/: a.tree  b.tree  c.tree  e.tree
test/transclude/: transcludee.tree
test/trees/: importee.tree  importer.tree  index.tree  linked.tree  linker.tree  reparse.tree  transcludee.tree  transcluder.tree
tools/pandoc-converter/: .gitignore  REUSE.toml  cabal.project  forester-pandoc.cabal
tools/rust-parser/: Cargo.toml  REUSE.toml  test.tree
(+273 files in other folders)
