;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(library
 (name Forester_test)
 (public_name forester.test)
 (preprocess
  (pps ppx_deriving.show ppx_yojson_conv))
 (libraries
  alcotest
  algaeff
  forester.prelude
  forester.core
  forester.compiler
  forester.parser
  forester.frontend
  forester.language_server
  logs
  eio
  eio_main
  eio.unix
  asai
  bwd
  fmt
  lsp
  jsonrpc
  unix
  yojson))
