;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(ocamllex Lexer)

(menhir
 (modules Grammar)
 (explain true)
 (flags --inspection --table --dump))

; The target for saving menhir's stdout to Grammar_messages.ml
(rule
 (targets Grammar_messages.ml)
 (deps Grammar.messages Grammar.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(library
 (name Forester_compiler)
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries
  forester.prelude
  forester.xml_names
  forester.core
  forester.human_datetime
  yuujinchou
  asai
  menhirLib
  bwd
  algaeff
  base64
  iri
  eio
  eio.core
  eio.unix
  fmt
  multihash
  multihash-digestif
  multicodec
  multibase
  cstruct
  cid)
 (public_name forester.compiler))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26-69))))
