;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(env
 (dev
  (flags
   (:standard -w -66-32-26-27-33))))

(library
 (name Forester_compiler)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries
  forester.prelude
  forester.xml_names
  forester.core
  forester.human_datetime
  forester.parser
  forester.search
  yuujinchou
  asai
  ocamlgraph
  pure-html
  str
  bwd
  algaeff
  base64
  iri
  eio
  eio.core
  eio.unix
  unix
  fmt
  multihash
  multihash-digestif
  multicodec
  multibase
  logs
  cstruct
  cid
  lsp)
 (public_name forester.compiler))
