;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(library
 (name Forester_core)
 (instrumentation (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries forester.prelude forester.xml_names forester.human_datetime datalog yuujinchou asai ocamlgraph bwd unix iri logs)
 (public_name forester.core))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26-69))))
