;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(library
 (name Forester_forest)
 (public_name forester.forest)
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries
  forester.prelude
  forester.xml_names
  forester.core
  datalog
  datalog.caml_interface
  ocamlgraph
  yojson
  algaeff
  pure-html
  iri))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26))))
