;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(library
 (name Forester_frontend)
 (public_name forester.frontend)
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries
  bwd
  forester.prelude
  forester.core
  forester.compiler
  forester.forest
  forester.human_datetime
  forester.xml_names
  ocamlgraph
  toml
  eio
  eio.core
  eio.unix
  fmt
  yojson
  asai
  algaeff
  str
  unix
  iri
  lsp
  pure-html
  logs))
