;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later


; (env
;  (dev
;   (flags (:standard -w -32-33))))

(library
 (name Forester_frontend)
 (public_name forester.frontend)
 (instrumentation (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries
  http
  cohttp-eio
  eio_main
  bwd
  forester.prelude
  forester.core
  forester.compiler
  forester.human_datetime
  forester.xml_names
  ocamlgraph
  toml
  eio
  eio.core
  eio.unix
  fmt
  yojson
  asai
  algaeff
  str
  unix
  iri
  lsp
  pure-html
  logs))
