;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(library
 (name Forester_frontend)
 (public_name forester.frontend)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show ppx_repr))
 (libraries
  logs.fmt
  http
  cohttp-eio
  eio_main
  bwd
  forester.prelude
  forester.core
  forester.compiler
  forester.human_datetime
  forester.xml_names
  forester.parser
  forester.search
  ocamlgraph
  toml
  eio
  eio.core
  eio.unix
  fmt
  yojson
  asai
  algaeff
  str
  unix
  lsp
  pure-html
  logs))
