;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(ocamllex Lexer)

(menhir
 (modules Grammar)
 (explain true)
 (flags --inspection --table --dump))

(library
 (name Human_datetime)
 (libraries menhirLib ptime unix repr)
 (preprocess
  (pps ppx_repr))
 (public_name forester.human_datetime))
