;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later OR Apache-2.0 WITH LLVM-exception

(library
 (name Forester_lsp)
 (public_name forester.language_server)
 (libraries
  algaeff
  repr
  unix
  ocamlgraph
  forester.prelude
  forester.core
  forester.compiler
  forester.frontend
  forester.human_datetime
  lsp
  asai
  eio
  eio.core
  eio.unix
  jsonrpc
  yojson
  bwd
  yuujinchou
  fmt
  str
  logs)
 (preprocess
  (pps ppx_deriving.show ppx_repr ppx_yojson_conv))
 (instrumentation
  (backend bisect_ppx)))
