;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(library
 (name Forester_prelude)
 (instrumentation (backend bisect_ppx))
 (libraries 
   eio
   eio.unix
   eio.core
   uucp
   bwd)
 (preprocess
  (pps ppx_repr))
 (public_name forester.prelude))
