;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(tests
 (names
 Test_expansion
  Test_compiler
  Test_markdown_conversion
  Test_markdown_fixture_conversion
  Test_diagnostic_store
  Test_graph_database
  Test_import_graph
  Test_uri_util)
 (preprocess
  (pps ppx_deriving.show))
 (libraries
  asai
  eio
  eio_main
  eio.core
  eio.unix
  alcotest
  unix
  fmt
  lsp
  logs
  logs.fmt
  yuujinchou
  ocamlgraph
  forester.language_server
  forester.test
  forester.prelude
  forester.parser
  forester.compiler
  forester.core
  forester.frontend))

;;;

(executable
 (name Test_timestamp)
 (public_name test-timestamp)
 (libraries))
