;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(cram
 (deps %{bin:test-errors}))

(executable
 (preprocess
  (pps ppx_deriving.show))
 (public_name test-errors)
 (name Test_errors)
 (libraries
  eio
  eio.core
  eio.unix
  eio_main
  forester.test
  forester.compiler
  forester.core
  forester.prelude
  forester.frontend
  pure-html
  asai))
