;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(cram
 (deps test.lua %{bin:forester} %{bin:nvim} %{bin:test-lsp}))

(rule
 (alias runtest)
 (deps %{bin:test-lsp})
 (targets)
 (action
  (progn
   (run git clone https://git.sr.ht/~jonsterling/forester-notes.org)
   (chdir
    forester-notes.org
    (progn
     (run git checkout c03da625fe3a58b6b43f43fe7a72271c67e327e7)
     (run %{bin:test-completion})
     (run %{bin:test-lsp}))))))

(executables
 (names Test_lsp Test_completion)
 (public_names test-lsp test-completion)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.show))
 (libraries
  asai
  alcotest
  algaeff
  fmt
  logs
  logs.fmt
  eio
  eio_main
  eio.core
  eio.unix
  lsp
  yojson
  yuujinchou
  str
  forester.test
  forester.prelude
  forester.core
  forester.compiler
  forester.frontend
  forester.language_server))
