;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(test
 (name Test_parser)
 (libraries
  alcotest
  forester.test
  forester.prelude
  forester.compiler
  forester.core
  forester.parser
  forester.frontend))

(test
 (name Test_rust_parser_parity)
 (libraries
  alcotest
  forester.test
  forester.prelude
  forester.compiler
  forester.core
  forester.parser
  forester.frontend))
