;;; SPDX-FileCopyrightText: 2024 The Forester Project Contributors
;;;
;;; SPDX-License-Identifier: GPL-3.0-or-later

(test
 (name Test_forester_search)
 (modules Test_forester_search)
 (preprocess
  (pps ppx_deriving.show))
 (libraries
  alcotest
  spelll
  yuujinchou
  forester.search
  forester.core
  forester.frontend
  forester.compiler))
